--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,18 @@ body {
     text-align: center;
 }
 
+.addUserBlock {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 999; 
+}
+
 .header-container {
     display: flex;
     justify-content: space-between;
@@ -15,15 +27,18 @@ body {
 }
 
 h1 {
-    color: #7d6bcd;  
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #7d6bcd;
     margin: 0;
 }
 
-/* Таблица */
+.headerAddUser{
+    align-items: center;
+    padding-top: 40px;
+}
+
 table {
     width: 90%;
-    margin: 20px auto 40px;  
+    margin: 20px auto 40px;
     border-collapse: collapse;
     background-color: #ffffff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -35,7 +50,6 @@ th, td {
     padding: 12px 15px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 th {
@@ -53,7 +67,7 @@ td:last-child {
     text-align: center;
 }
 
-button {
+button, .createUserBtn, .edit-btn, .block-btn {
     background-color: #7d6bcd;
     color: #ffffff;
     border: none;
@@ -61,77 +75,31 @@ button {
     padding: 8px 12px;
     cursor: pointer;
     font-size: 14px;
-    transition: background-color 0.3s;
-}
-button:hover {
-    background-color: #6756b3;
-}
-
-button:active {
-    background-color: #5745a2;
-}
-.createUserBtn {
-    background-color: #7d6bcd;  
-    color: white;
-    padding: 10px 20px;
-    border-radius: 4px;
-    font-size: 14px;
-    cursor: pointer;
-}
-.createUserBtn:hover {
-    background-color: #6756b3;
-}
-
-.edit-btn, .block-btn {
-    background-color: #7d6bcd;
-    color: #ffffff;
-    border: none;
-    border-radius: 4px;
-    padding: 8px 16px;
-    font-size: 14px;
-    cursor: pointer;
     transition: background-color 0.3s, transform 0.3s;
-    margin-right: 10px;
 }
 
-.edit-btn {
-    background-color: #7d6bcd;
+button:hover, .createUserBtn:hover, .edit-btn:hover, .block-btn:hover {
+    background-color: #6756b3;
 }
 
-.edit-btn:hover {
-    background-color: #45a049;
-}
-
-.edit-btn:active {
-    background-color: #388e3c;
-}
-.block-btn {
-    background-color: #7d6bcd;
-}
-
-.block-btn:hover {
-    background-color: #c0392b;
-}
-
-.block-btn:active {
-    background-color: #a93226;
+button:active, .createUserBtn:active, .edit-btn:active, .block-btn:active {
+    background-color: #5745a2;
 }
 
 .modal {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); /* Центрирование по вертикали и горизонтали */
+    transform: translate(-50%, -50%); /* Centering */
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-    justify-content: center; 
+    justify-content: center;
     align-items: center;
-    z-index: 1000; 
-    box-sizing: border-box; 
+    z-index: 1000;
+    box-sizing: border-box;
 }
-
 .modalBlock {
     background-color: #ffffff;
     padding: 20px;
@@ -141,9 +109,8 @@ button:active {
     width: 90%;
     max-width: 500px;
     animation: fadeIn 0.3s ease-in-out;
-    box-sizing: border-box; 
+    box-sizing: border-box;
 }
-
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -151,30 +118,74 @@ button:active {
     }
     to {
         opacity: 1;
-        transform: scale(1); 
+        transform: scale(1);
     }
 }
-
 .modalBlock h2 {
     color: #7d6bcd;
     margin-bottom: 20px;
 }
-
 .modalBlock form label {
     display: block;
     margin-bottom: 8px;
     font-weight: bold;
 }
-
-.modalBlock form .modalInput {
-    width: calc(100% - 20px);
-    padding: 8px;
+.modalBlock form .modalInput, .modalBlock form #blockHours, .modalBlock form #blockReason, #otherReasonBlock input {
+    width: 100%;
+    padding: 12px;
     margin-bottom: 15px;
     border: 1px solid #ddd;
     border-radius: 4px;
     font-size: 14px;
+    background-color: #fafafa;
+    box-sizing: border-box;
 }
 
 #otherReasonBlock {
     margin-top: 10px;
+}
+
+.edit-btn {
+    background-color: #7d6bcd;
+}
+.edit-btn:hover {
+    background-color: #45a049;
+}
+.edit-btn:active {
+    background-color: #388e3c;
+}
+.block-btn {
+    background-color: #7d6bcd;
+}
+.block-btn:hover {
+    background-color: #c0392b;
+}
+.block-btn:active {
+    background-color: #a93226;
+}
+
+.modalInput {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+    background-color: #fafafa;
+    box-sizing: border-box;
+}
+
+#passwordRequirements {
+    color: gray;
+    font-size: 0.9em;
+    margin-top: 5px;
+}
+
+.createUserBtn {
+    padding: 10px 20px;
+    font-size: 14px;
+}
+
+.createUserBtn:hover {
+    background-color: #6756b3;
 }
